Fix thumbnails for map align

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -366,9 +366,9 @@ select {
 }
 
 #sortable {list-style-type: none;}
-#sortable li {margin: 3px 3px 3px 0; padding: 1px; float: left; width: 150px; height: 150px; font-size: 2em; text-align: center;line-height:150px; }
+#sortable li {margin: 3px 3px 3px 0; padding: 1px; float: left; width: 256px; height: 256px; font-size: 2em; text-align: center;line-height:256px; }
 #sortable li img {vertical-align: middle;display: inline; }
-#mapgrid {width:350px; margin:auto;}
+#mapgrid {width:562px; margin:auto;}
 .layer-properties * td { background-color:#ddd; margin: 2px; }
 .layer-properties * td.property { width:25%;  font-style: italic; }
 
